<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rw.priv.trainingplancreator.MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/mainText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainText1"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/textColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainText2"
        android:text="@string/mainText2"
        android:textAlignment="center"
        android:layout_below="@id/mainText1"
        android:textSize="15sp"
        android:layout_marginTop="25sp"
        android:textColor="@color/textColor"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainText2"
        android:text="@string/btnAdd"
        android:id="@+id/btnAdd"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5sp"
        android:onClick="addExercise"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainText3"
        android:text="@string/mainText3"
        android:textAlignment="center"
        android:layout_below="@id/btnAdd"
        android:textSize="15sp"
        android:layout_marginTop="25sp"
        android:textColor="@color/textColor"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainText3"
        android:text="@string/btnCreate"
        android:id="@+id/btnCreate"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5sp"
        android:onClick="createPlan"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainText4"
        android:text="@string/mainText4"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_below="@id/btnCreate"
        android:layout_marginTop="25sp"
        android:textColor="@color/textColor"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTrain"
        android:layout_below="@+id/mainText4"
        android:text="@string/btnTrain"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5sp"
        android:onClick="train"/>
</RelativeLayout>
