<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_plan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="rw.priv.trainingplancreator.CreatePlanActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="@string/createText1"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textChooseDay"
        android:text="@string/dayChooseText"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@+id/text1"
        android:layout_marginTop="20sp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daySpinner"
        android:entries="@array/days"
        android:textAlignment="center"
        android:layout_below="@+id/textChooseDay"
        android:layout_marginTop="10sp">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstMuscles"
        android:text="Wybierz partię mięśni:"
        android:textColor="@color/textColor"
        android:layout_below="@id/daySpinner"
        android:layout_marginTop="10sp"
        android:textSize="20sp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/firstMuscles"
        android:layout_below="@id/daySpinner"
        android:layout_marginTop="10sp"
        android:id="@+id/musclesSpinner"
        android:entries="@array/spinnerItems"
        android:textAlignment="center">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textChooseExercise"
        android:text="@string/exerciseChooseText"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@+id/firstMuscles"
        android:layout_marginTop="10sp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textChooseExercise"
        android:id="@+id/exerciseSpinner"
        android:layout_marginTop="10sp"></Spinner>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addNextExercise"
        android:text="Dodaj ćwiczenie"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/exerciseSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuń"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/exerciseSpinner"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10sp"
        android:id="@+id/btnDelete"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textWybrCwicz"
        android:layout_below="@id/addNextExercise"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10sp"
        android:text="@string/textWybrCwicz"
        android:layout_centerHorizontal="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textWybrCwicz"
        android:layout_marginTop="10sp"
        android:fillViewport="true"
        android:id="@+id/scrollView">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseInPlan"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </ScrollView>
</RelativeLayout>
